# Cell-motion

Ellipse_Multi_Cell_Model/: a.out  main.cpp
Ellipse_Multi_Cell_Model/Headers/: adhesion.hpp  cell.hpp  energy.hpp  geom.hpp  global_defs.hpp  network.hpp  params.hpp  utils.hpp
Ellipse_Multi_Cell_Model_Numpy/: Adh_funcs.py  Cell_funcs.py  distance_data.txt  ellipses.py  energy.py  energy_plots.py  main.py  minimize_CER.py  plot_cells.py  random_funcs.py  test.py
Ellipse_Multi_Cell_Model_Python/: adhesions.py  cell.py  energy.py  main.py  plot_cells.py
Ellipse_New_Multi_Cell_Constrained_Model_Numpy/: Adh_funcs.py  Cell_funcs.py  distance_data.txt  ellipses.py  energy.py  main.py  plot_cells.py
Ellipse_New_Multi_Cell_Model_Numpy/: Adh_funcs.py  Cell_funcs.py  distance_data.txt  energy.py  energy_plots.py  main.py  plot_cells.py  plot_traction.py  random_funcs.py  speed_per_cycle.py  test.py
Multi_Cell_Julia/: Adh_funcs.jl  Cell_funcs.jl  DATA.npz  EE_Ovlap_Area.jl  Energy_funcs.jl  Plot_cells.jl  Poly_solvers.jl  ell_ovlap_area.jl  main.jl  python_plot.py  test.jl
Multi_Cell_Julia/cell/: Manifest.toml  (+1 more)
Single_Cell_Codes_(Cell motility_ soft matter_2019)/one_cell_network/one_cell_network/: CMakeCache.txt  CMakeLists.txt  Deformations.h  Makefile  Network.h  brent.h  cmake_install.cmake  contraction.h  dF1dim.h  dbrent.h  dlinmin.h  energy_grad.h  extension.h  f1dim.h  frprmn.h  ifcell.h  in_out.h  linmin.h  main.cpp  mnbrak.h  one_cell_network  rotation.h  testf10id0theta.txt  testf10id0xc.txt  testf10id0xcShift.txt  testf1id0theta.txt  testf1id0xc.txt  vector.h
(+72 files in other folders)
